[package]
name = "adventofcode-rust"
version = "0.1.0"
authors = ["Xavier Vello <xavier.vello@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4.0"
regex = "1"
bit-vec = "0.6"
petgraph = "0.6"
retain_mut = "0.1.5"
hashers = "1.0.1"

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = 1
